--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,10 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
+    "target": "esnext",
+    "module": "esnext",
     "esModuleInterop": true,
     "declaration": true,
-    "outDir": "./lib",
     "strict": true,
-    "lib": ["es7"]
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/__tests__/*"]
