--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "2.0.2",
   "description": "A library for arbitrary precision floating point arithmetic.",
   "main": "lib/mod.js",
+  "module": "lib/mod.mjs",
   "types": "lib/mod.d.ts",
-  "unpkg": "lib/bigfloat.min.js",
+  "unpkg": "lib/",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "bili",
+    "build": "bili && cp-cli ./lib/mod.esm.js ./lib/mod.mjs",
     "lint": "tslint -p tsconfig.json",
     "prepare": "npm run build",
     "prepublishOnly": "npm run lint",
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.6.3",
     "bili": "^4.8.1",
+    "cp-cli": "^2.0.0",
     "rollup-plugin-typescript2": "^0.24.3",
     "tslint": "^5.20.0",
     "typescript": "^3.6.4"
