--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "target": "ES3",
     "module": "CommonJS",
     "outDir": "lib/cjs"
   },
